istio/virtual-service/yaml/simpleweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleweb
  namespace: default
  labels:
    app: simpleweb
spec:
  selector:
    app: simpleweb
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
