istio/virtual-service/yaml/simpleweb-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "simpleweb.codelieche.com"
