istio/virtual-service/yaml/simpleweb-destination-rule-all.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  host: simpleweb
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
