istio/virtual-service/yaml/simpleweb-virtual-service-base.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hosts:
  - "simpleweb.codelieche.com"
  gateways:
  - simpleweb
  http:
  - route:
    - destination:
        host: simpleweb
