istio/virtual-service/yaml/simpleweb-virtual-service-fault-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hosts:
  - "simpleweb.codelieche.com"
  gateways:
  - simpleweb
  http:
  - match:
    - uri:
        exact: /
    fault:
      abort:
        # 记得是2选1，不可同时设置http2Error和httpStatus
        # http2Error: "503 错误信息"
        httpStatus: 503
        percentage:
          value: 50
    route:
    - destination:
        host: simpleweb
