istio/virtual-service/yaml/simpleweb-virtual-service-match-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hosts:
  - "simpleweb.codelieche.com"
  gateways:
  - simpleweb
  http:
  - match:
    - headers:
        X-API-VERTION:
          exact: v1
    route:
    - destination:
        host: simpleweb
        subset: v1
  - match:
    - headers:
        X-API-VERTION:
          exact: v2
    route:
    - destination:
        host: simpleweb
        subset: v2
  - match:
    - headers:
       X-API-VERTION:
         exact: v3
    route:
    - destination:
        host: simpleweb
        subset: v3
  - route:
    - destination:
        host: simpleweb
