istio/virtual-service/yaml/simpleweb-virtual-service-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hosts:
  - simpleweb.codelieche.com
  gateways:
  - simpleweb
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: simpleweb
        subset: v1
    mirror:
      host: simpleweb
      subset: v2
    mirror_percent: 100
