istio/virtual-service/yaml/simpleweb-virtual-service-rewhite.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hosts:
  - simpleweb.codelieche.com
  gateways:
  - simpleweb
  http:
  - match:
    - uri:
        prefix: /v1/
    rewrite:
      uri: /
    route:
    - destination:
        host: simpleweb
        subset: v1
  - match:
    - uri:
        prefix: /v2/
    rewrite:
      uri: /
    route:
    - destination:
        host: simpleweb
        subset: v2
  - match:
    - uri:
        prefix: /v3/
    rewrite:
      uri: /
    route:
    - destination:
        host: simpleweb
        subset: v3
