istio/virtual-service/yaml/simpleweb-virtual-service-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleweb
  labels:
    app: simpleweb
spec:
  hosts:
  - "simpleweb.codelieche.com"
  gateways:
  - simpleweb
  http:
  - route:
    - destination:
        host: simpleweb
        subset: v1
      weight: 25
    - destination:
        host: simpleweb
        subset: v2
      weight: 25
    - destination:
        host: simpleweb
        subset: v3
      weight: 50
